[package]
name = "http_status_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clap-duration = "0.1.11"
colored = "3.0.0"
duration-human = "0.1.10"
futures = "0.3.31"
reqwest = "0.12.15"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
